# lidar_obstacle_detection_real_data

./: .gitignore  CMakeLists.txt  README.md
src/: cluster.cpp  environment.cpp  kdtree.h  processPointClouds.cpp  processPointClouds.h  ransac2d.cpp
src/cluster/: cluster.h
src/quizs/: cluster.cpp  kdtree.h  ransac2d.cpp
src/ransac/: ransac.h
src/render/: box.h  render.h
src/sensors/: lidar.h
